# fig

src/: .gitignore  Makefile  fig-add-target-command.c  fig-add-target-command.h  fig-am-script.c  fig-am-script.h  fig-am-target.h  fig-cli.c  fig-cli.h  fig-command-info.c  fig-command-info.h  fig-command-manager.c  fig-command-manager.h  fig-command.c  fig-command.h  fig-init-command.c  fig-init-command.h  fig-plugin.c  fig-plugin.h  fig-target-type.c  fig-target-type.h  fig-template.c  fig-template.h  fig-update-authors-command.c  fig-update-authors-command.h  fig-util.c  fig-util.h  fig.c  fig.h  test.sh  tests.c
src/plugins/: fig-init-command.c  fig-init.c
src/templates/: .gitignore  Makefile.am  autogen.sh  configure.ac
